[gd_scene load_steps=2 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="spawn_player" type="Position2D" parent="."]
position = Vector2( 523, 525 )

[node name="enemytimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="spawn_enem" type="Position2D" parent="."]
position = Vector2( 523, 35 )

[connection signal="timeout" from="enemytimer" to="." method="_on_enemytimer_timeout"]
